Fix lable alignment and order delete button permission for workers

--- a/OMS/static/css/order_form.css
+++ b/OMS/static/css/order_form.css
@@ -80,3 +80,6 @@ form .buttons-container a {
   line-height: 40px;
 }
 
+form p{
+  display: flex;
+}
